# can_i_vulkan

./: Cargo.toml  clippy.toml  query_devices.json  query_devices.ron  scrape_steam.js
src/: get.rs  iterator.rs  main.rs  os_category.rs  report_summary.rs  vendor_device.rs
