[package]
name = "can_i_vulkan"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = "s"

[dependencies]
derivative = "2.2.0"
eyre = "0.6.8"
itertools = "0.10.3"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
maplit = "1.0.2"
regex = "1.6.0"
reqwest = "0.11.11"
ron = "0.7.1"
semver = "1.0.12"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["full"] }
urlencoding = "2.1.0"
